--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.7.1",
     "jest-watch-typeahead": "0.3.0",
+    "lodash.template": "^4.5.0",
     "mini-css-extract-plugin": "0.5.0",
     "mobx": "^5.13.0",
     "mobx-react": "^6.1.1",
